<?xml version="1.0"?>
<package format="2">
  <name>radar_relative_speed</name>
  <version>0.0.1</version>
  <description>Calculate and visualize relative speed of vehicles from radar data</description>
  
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Build tool -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies required at build and run -->
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <!-- Optional: if you plan to launch with roslaunch -->
  <export>
    <build_type>catkin</build_type>
  </export>
</package>
